--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1149,6 +1149,7 @@
     <Content Include="Scripts\treant.js\Treant.js" />
     <Content Include="Scripts\typeahead.bundle.min.js" />
     <Content Include="Scripts\typeahead.jquery.min.js" />
+    <Content Include="banned.aspx" />
     <Content Include="_app_offline.htm" />
     <Content Include="packages.config" />
     <None Include="Scripts\_references.js" />
