--- a/DotaceLoader/App.config
+++ b/DotaceLoader/App.config
@@ -1,5 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="CnnString" connectionString="data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidac;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbEntities" connectionString="metadata=res://*/Data.Db.csdl|res://*/Data.Db.ssdl|res://*/Data.Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidac;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -63,8 +72,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
   <appSettings>
     <add key="ESConnection" value="http://localhost:9200" />
     <add key="postgres" value="Host=hostname;Username=postgres;Password=password;Database=postgres" />
+    <add key="WebAppDataPath" value="d:\repos\HlidacStatu\HlidacStatu\Web.Statu\App_Data" />
+    <add key="DumpsPath" value="d:\repos\HlidacStatu\Data\_dumps" />
+    <add key="CnnString" value="data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidac;MultipleActiveResultSets=True;App=EntityFramework" />
   </appSettings>
 </configuration>
