--- a/DotaceLoader/packages.config
+++ b/DotaceLoader/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.30" targetFramework="net472" />
+  <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.22" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
