--- a/Lib.Data.External/Lib.Data.External.csproj
+++ b/Lib.Data.External/Lib.Data.External.csproj
@@ -496,6 +496,7 @@
     <Compile Include="DatoveSchranky\ISDS.cs" />
     <Compile Include="Discourse.cs" />
     <Compile Include="RequestLimiter.cs" />
+    <Compile Include="StatniPokladna\FinanceData.cs" />
     <Compile Include="Vazby\FromGraphDb.cs" />
     <Compile Include="Zabbix\ZabAvailability.cs" />
     <Compile Include="Zabbix\ZabAvailabilityInterval.cs" />
@@ -513,6 +514,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="K_Index\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
